<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) Mattia Barbon <mattia@barbon.org>
     distributed under the terms of the MIT license -->
<resources>
    <string name="app_name">Android Cash</string>
    <string name="account_from_prompt">From account</string>
    <string name="account_to_prompt">To account</string>
    <string name="expense_amount_prompt">Amount</string>
    <string name="expense_date_prompt">Date</string>
    <string name="add_expense">Add expense</string>
    <string name="from_expense_template">Use template</string>
    <string name="new_account">New account</string>
    <string name="expense_list">Expenses</string>
    <string name="account_list">Accounts</string>
    <string name="expense_description_prompt">Description</string>
    <string name="export_expenses">Export expenses</string>
    <string name="delete_expenses">Delete expenses</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>

    <!-- account list -->
    <string name="import_from_gnucash">Import from GnuCash</string>

    <!-- new account/edit account -->
    <string name="account_description">Description</string>
    <string name="gnucash_account_name">GnuCash account (use \':\' as separator)</string>
    <string name="account_hidden">Hidden</string>

    <!-- discard changes dialog -->
    <string name="item_modified_title">Unsaved changes</string>
    <string name="item_modified_message">There are unsaved changes, do you really want to discard them?</string>
    <string name="discard_changes">Discard</string>

    <!-- expenses exported dialog -->
    <string name="expenses_exported_title">Expenses successfully exported</string>
    <string name="expenses_exported">The expenses have been exported to a QIF file\n\nPlease connect your device via USB and import the acash.qif file from the AndroidCash directory into GnuCash</string>

    <!-- account has expenses -->
    <string name="alert_account_has_expenses">There are expenses registered on this account: please delete them before trying to delete the account.</string>

    <!-- menu -->
    <string name="about_acash">About</string>
    <string name="new_expense">New expense</string>

    <!-- new account -->
    <string name="new_account_at_least_2">You must define at least two accounts before entering an expense entry</string>
    <string name="add_account">Add account</string>

    <!-- account detail -->
    <string name="alert_delete_account">Are you sure you want to permanently delete the account?</string>
    <string name="update_account">Update account</string>
    <string name="delete_account">Delete account</string>

    <!-- expense detail -->
    <string name="alert_delete_expense">Are you sure you want to permanently delete the expense?</string>
    <string name="update_expense">Update expense</string>
    <string name="delete_expense">Delete expense</string>

    <!-- delete all dialog -->
    <string name="confirm_delete_all_title">Delete all expenses</string>
    <string name="confirm_delete_all">Are you sure you want to permanently delete all expenses?</string>
    <string name="delete_all">Delete all</string>

    <!-- about dialog -->
    <string name="about_title">About Android Cash</string>
    <string name="about_app_description">Android Cash\nCopyright (c) 2011 Mattia Barbon\n\n</string>
    <string name="about_source_code">
The source code for this program is available on
<a href="http://github.com/mbarbon/androidcash">GitHub</a> and is
distributed under the MIT license (full license text is reproduced
below).
    </string>
    <string name="about_icon">
The program icon was created by
<a href="http://www.dapino-colada.nl/">DaPino Colada</a> and is available
under the Creative Commons Attribution-NonCommercial 3.0 (CC BY-NC
3.0) license.
    </string>
    <string name="about_license">
<b>MIT LICENSE</b>\n\n

Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
"Software"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:\n\n

The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.\n\n

<b>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</b>
    </string>
</resources>
