<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) Mattia Barbon <mattia@barbon.org>
     distributed under the terms of the MIT license -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
  <item
      android:id="@+id/new_account"
      android:icon="@drawable/ic_menu_add"
      android:title="@string/new_account"
      />
  <item
      android:id="@+id/expense_list"
      android:icon="@drawable/ic_menu_list"
      android:title="@string/expense_list"
      />
  <item
      android:id="@+id/account_list"
      android:icon="@drawable/ic_menu_list"
      android:title="@string/account_list"
      />
  <item
      android:id="@+id/export_expenses"
      android:icon="@drawable/ic_menu_save"
      android:title="@string/export_expenses"
      />
  <item
      android:id="@+id/delete_expenses"
      android:icon="@drawable/ic_menu_delete"
      android:title="@string/delete_expenses"
      />
  <item
      android:id="@+id/about_acash"
      android:icon="@drawable/ic_menu_info_details"
      android:title="@string/about_acash"
      />
</menu>
