<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
   >
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/account_from_prompt"
      />
  <Spinner
      android:id="@+id/from_account"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:prompt="@string/account_from_prompt"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/account_to_prompt"
      />
  <Spinner
      android:id="@+id/to_account"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:prompt="@string/account_to_prompt"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/expense_amount_prompt"
      />
  <EditText
      android:id="@+id/expense_amount"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:numeric="decimal"
      android:inputType="numberDecimal"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/expense_date_prompt"
      />
  <EditText
      android:id="@+id/expense_date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="none"
      android:focusable="false"
      android:focusableInTouchMode="false"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/expense_description_prompt"
      />
  <EditText
      android:id="@+id/expense_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:singleLine="true"
      />
</merge>
