<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/account_description"
      />
  <EditText
      android:id="@+id/account_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/gnucash_account_name"
      />
  <EditText
      android:id="@+id/gnucash_account"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      />

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:gravity="bottom|right">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_account"
        android:onClick="onAddAccount"
        />
  </LinearLayout>
</LinearLayout>
